# Spec-gate

./: .env  .gitignore  CONTRIBUTING.md  README.md  SPEC.md  main.py  pyproject.toml  specgate.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.js  main.jsx  styles.css
specgate/: __init__.py  graph.py  observability.py  orchestrator_runner.py  runtime.py  server.py  state.py
specgate/tools/: file_ops.py
specgate/utils/: config_loader.py  io_manager.py  knowledge_loader.py  spatial_context_store.py  usage_tracker.py
tests/: test_config_loader.py  test_file_ops.py  test_graph_routing.py  test_io_manager.py  test_knowledge_loader.py  test_observability.py  test_server.py  test_spatial_context_store.py  test_usage_tracker.py
