[project]
name = "spec-gate"
version = "0.1.0"
description = "Project Spec-Gate is a production-grade backend framework designed to host autonomous AI agents. It prioritizes reliability, observability, and cost-efficiency by treating agentic workflows as a series of versioned, human-approved state transitions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-core>=1.3.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "litellm>=1.83.13",
    "mempalace>=3.3.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.46.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
specgate-dashboard = "specgate.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["specgate"]
